[package]
name = "livewinsize"
version = "1.0.0"
description = "Visualize window size in pixels and other units"
authors = ["Axorax"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "window-set-size"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
